src/objects/CaseInfo__c.object
<CustomObject>
    <fields>
        <fullName>AccountMasterRef__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>会計商品</label>
        <referenceTo>AccountMaster__c</referenceTo>
        <relationshipLabel>問い合わせ</relationshipLabel>
        <relationshipName>CasAccountMasterRef</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CaseContent__c</fullName>
        <label>問い合わせ詳細内容</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>CaseDateTime__c</fullName>
        <label>問い合わせ日時</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CaseShopName__c</fullName>
        <label>問い合わせユーザ所属店舗</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CaseTitle__c</fullName>
        <label>問い合わせタイトル</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CaseUserId__c</fullName>
        <externalId>true</externalId>
        <label>問い合わせユーザID</label>
        <length>37</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CaseUserName__c</fullName>
        <label>問い合わせユーザ名</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrderRef__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>注文</label>
        <referenceTo>Order__c</referenceTo>
        <relationshipLabel>問い合わせ</relationshipLabel>
        <relationshipName>OrderRefCase</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ParCaseRef__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>問い合わせ(親)</label>
        <referenceTo>CaseInfo__c</referenceTo>
        <relationshipLabel>問い合わせ</relationshipLabel>
        <relationshipName>ParCaseRefSub</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>問い合わせ</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>すべて選択</label>
    </listViews>
    <nameField>
        <displayFormat>CAS_{YYYYMMDD}_{00000000}</displayFormat>
        <label>問い合わせNo#</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>